compiler/testData/diagnostics/tests/multiplatform/topLevelFun/headerWithoutImpl.ll.kt
// MODULE: m1-common
// FILE: common.kt

<!NO_ACTUAL_FOR_EXPECT!>expect fun foo()<!>
